# Moov-UP

./: .gitignore  Makefile  README.md  docker-compose.yml  env.compose.example  package.json  start-api.ps1
.github/: actionlint.yaml
.github/workflows/: deploy-hetzner.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/data/: fiche_formation.csv  fiche_metiers.csv  metiers_enriched.json  metiers_meta.json
backend/scripts/: build_index.py  scrape.py
backend/src/: config.py  main.py
backend/src/infrastructure/api/: deps.py  limiter.py  schemas.py
backend/src/infrastructure/api/routes/: auth.py  chat.py  conversations.py
backend/src/infrastructure/db/: database.py  models.py
backend/src/metier/: mappings.py  profile_builder.py  prompt.py
backend/src/service/: auth_service.py  llm_client.py  rag_service.py
backend/tests/: conftest.py  test_auth_service.py  test_build_index.py  test_db_models.py  test_llm_client.py  test_mappings.py  test_profile_builder.py  test_prompt.py  test_rag_service.py  test_rate_limit.py  test_routes_auth.py  test_routes_chat.py  test_routes_conversations.py  test_routes_health.py  test_scrape.py
backend/tests/fixtures/: onisep_aes.html
deploy/: Caddyfile.example
frontend/: .env.development  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: check-i18n.mjs
frontend/src/: App.jsx  clientBuildId.js
frontend/src/components/: AccountProfileModal.jsx  CvLmUploader.jsx  (+4 more)
scripts/: audit-landing-keys.mjs  dev-all.mjs  dev-api.mjs  verify_github_ssh_secret.py
(+25 files in other folders)
